--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/react-scroll": "^1.8.4",
     "@web3modal/ethereum": "^2.6.2",
     "@web3modal/react": "^2.6.2",
+    "axios": "^1.7.1",
     "bignumber.js": "^9.1.0",
     "chakra-react-select": "^4.4.3",
     "crypto-js": "^4.1.1",
