--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # app config
 NEXT_PUBLIC_APP_PROTOCOL=https
-NEXT_PUBLIC_APP_HOST=test1.tarality.io
+NEXT_PUBLIC_APP_HOST=devnet-taral.tarality.com
 # NEXT_PUBLIC_APP_PORT=3000
 # NEXT_PUBLIC_APP_INSTANCE=152.42.188.175
 # NEXT_PUBLIC_APP_ENV=development
@@ -13,7 +13,7 @@ NEXT_PUBLIC_BLOCKSCOUT_VERSION=v4.1.7-beta
 NEXT_PUBLIC_API_SPEC_URL=https://raw.githubusercontent.com/blockscout/blockscout-api-v2-swagger/main/swagger.yaml
 
 # network config
-NEXT_PUBLIC_NETWORK_NAME=Taral
+NEXT_PUBLIC_NETWORK_NAME=Taral Devnet
 NEXT_PUBLIC_NETWORK_SHORT_NAME=Taral
 NEXT_PUBLIC_NETWORK_ASSETS_PATHNAME=
 NEXT_PUBLIC_NETWORK_LOGO=https://raw.githubusercontent.com/blockscout/frontend-configs/dev/configs/network-logos/goerli.svg
@@ -22,7 +22,7 @@ NEXT_PUBLIC_NETWORK_ID=4440
 NEXT_PUBLIC_NETWORK_CURRENCY_NAME=Taral
 NEXT_PUBLIC_NETWORK_CURRENCY_SYMBOL=Taral
 NEXT_PUBLIC_NETWORK_CURRENCY_DECIMALS=18
-NEXT_PUBLIC_NETWORK_TOKEN_ADDRESS=0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2
+# NEXT_PUBLIC_NETWORK_TOKEN_ADDRESS=0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2
 NEXT_PUBLIC_IS_ACCOUNT_SUPPORTED=true
 NEXT_PUBLIC_NETWORK_VERIFICATION_TYPE=validation
 NEXT_PUBLIC_NETWORK_RPC_URL=https://devnet-taral-rpc1.tarality.com
@@ -33,7 +33,7 @@ NEXT_PUBLIC_IS_TESTNET=true
 NEXT_PUBLIC_HAS_BEACON_CHAIN=false
 
 # api config
-NEXT_PUBLIC_API_HOST=test1.tarality.io
+NEXT_PUBLIC_API_HOST=devnet-taral.tarality.com
 # NEXT_PUBLIC_API_PORT=6571
 NEXT_PUBLIC_API_PROTOCOL=https
 NEXT_PUBLIC_API_BASE_PATH=/
