--- a/deploy/values/l2-optimism-goerli/values.yaml
+++ b/deploy/values/l2-optimism-goerli/values.yaml
@@ -267,6 +267,7 @@ frontend:
         - "/search-results"
         - "/token"
         - "/tokens"
+        - "/validators"
         - "/csv-export"
         - "/verified-contracts"
         - "/graphiql"
