--- a/deploy/values/main/values.yaml
+++ b/deploy/values/main/values.yaml
@@ -222,6 +222,7 @@ frontend:
         - "/search-results"
         - "/token"
         - "/tokens"
+        - "/validators"
         - "/accounts"
         - "/visualize"
         - "/api-docs"
