--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "d3": "^7.6.1",
     "dayjs": "^1.11.5",
     "dom-to-image": "^2.6.0",
+    "ethers": "5.4",
     "framer-motion": "^6.5.1",
     "graphiql": "^2.2.0",
     "graphql": "^16.6.0",
@@ -84,7 +85,8 @@
     "swagger-ui-react": "^5.1.0",
     "use-font-face-observer": "^1.2.1",
     "viem": "^1.1.8",
-    "wagmi": "^1.3.3"
+    "wagmi": "^1.3.3",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@playwright/experimental-ct-react": "1.35.1",
